Allow multiple details descriptions per user
